fix: Add custom scrollbar styles and enhance album result cursor interaction.

--- a/src/app/components/search/searchResult/albumResult/styles.module.scss
+++ b/src/app/components/search/searchResult/albumResult/styles.module.scss
@@ -55,6 +55,7 @@
       width: 15rem;
       border-radius: 8px;
       opacity: 80;
+      cursor: pointer;
     }
   }
 
